# insurance-glm-tools

./: CHANGELOG.md  README.md  pyproject.toml  run_tests_databricks.py
.github/workflows/: ci.yml
benchmarks/: run_benchmark.py
notebooks/: benchmark.py  benchmark_databricks.py  demo_glm_tools.py
src/insurance_glm_tools/: __init__.py
src/insurance_glm_tools/cluster/: __init__.py  backends.py  clusterer.py  constraints.py  diagnostics.py  level_map.py  penalties.py  split_coding.py
src/insurance_glm_tools/nested/: __init__.py  _utils.py  embedding.py  glm.py  pipeline.py  territory.py
tests/cluster/: conftest.py  test_constraints.py  test_diagnostics.py  test_exposure.py  test_ordinal.py  test_p0_regressions.py  test_penalties.py  test_ported_functions.py
tests/nested/: test_embedding.py  test_glm.py  test_pipeline.py  test_territory.py  test_utils.py
