[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insurance-glm-tools"
version = "0.1.2"
description = "GLM tools for UK insurance pricing: nested GLMs with entity embeddings, territory clustering, and automated factor-level banding via R2VF"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Burning Cost", email = "pricing.frontier@gmail.com" },
]
keywords = [
    "insurance",
    "pricing",
    "GLM",
    "nested GLM",
    "entity embedding",
    "territory",
    "spatial clustering",
    "actuarial",
    "UK",
    "motor",
    "personal-lines",
    "Poisson",
    "Gamma",
    "ratemaking",
    "CANN",
    "R2VF",
    "fused lasso",
    "factor clustering",
    "ordinal banding",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.12",
    "scikit-learn>=1.3",
    "statsmodels>=0.14.5",  # 0.14.4- uses removed scipy._lazywhere
    "torch>=2.0",
]

[project.optional-dependencies]
spatial = [
    "geopandas>=0.13",
    "libpysal>=4.7",
    "spopt>=0.5",
]
plot = [
    "matplotlib>=3.6",
]
all = [
    "geopandas>=0.13",
    "libpysal>=4.7",
    "spopt>=0.5",
    "matplotlib>=3.6",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "geopandas>=0.13",
    "libpysal>=4.7",
    "spopt>=0.5",
    "matplotlib>=3.6",
    "pyarrow>=12.0",
]

[project.urls]
Homepage = "https://github.com/burning-cost/insurance-glm-tools"
Repository = "https://github.com/burning-cost/insurance-glm-tools"
Issues = "https://github.com/burning-cost/insurance-glm-tools/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/insurance_glm_tools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
